<resources>
    <string name="app_name">Fly</string>
    <string name="action_settings">Settings</string>

    <string name="msg_failed_to_refresh">Failed to reload, please check internet connection and try to pull to refresh again."</string>
    <string name="msg_empty_view">Please tap on the screen to reload Flight events also make sure internet is connected before tap.</string>
    <string name="msg_failed_load">Failed to load detail, please go back and try again.</string>

    <string name="match_crew">Match crew</string>
    <string name="details"><u>Details</u></string>
    <string name="flight_no">Flight No : </string>
    <string name="date">Date :</string>
    <string name="aircraft_type">Aircraft Type :</string>
    <string name="tail">Tail :</string>
    <string name="departure">Departure :</string>
    <string name="destination">Destination :</string>
    <string name="time_depart">Time Depart :</string>
    <string name="time_arrive">Time Arrive :</string>
    <string name="duty_id">DutyID :</string>
    <string name="duty_code">DutyCode :</string>
    <string name="captain">Captain :</string>
    <string name="first_officer">First Officer :</string>
    <string name="flight_attendant">Flight Attendant :</string>


</resources>
