<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_gravity="center"
              android:gravity="center"
              android:padding="20dp"
              >

    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
       android:text="@string/details"
       android:textSize="25sp"
       android:textStyle="bold"
       android:layout_marginBottom="40dp"
       android:gravity="center"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flight_no"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="MX78"
                  android:id="@+id/_flightNo"
        />

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/date"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="06/05/2018"
                  android:id="@+id/_date"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/aircraft_type"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="748-800E"
                  android:id="@+id/_aircraftType"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tail"
                android:textStyle="bold"
        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="9878"
                  android:id="@+id/_tail"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold"
                android:text="@string/departure"
        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="AMS"
                  android:id="@+id/_departure"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/destination"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="ALC"
                  android:id="@+id/_destination"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_depart"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="11:14"
                  android:id="@+id/_timeDepart"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/time_arrive"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="14:35"
                  android:id="@+id/_timeArrive"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty_id"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="FLT"
                  android:id="@+id/_dutyId"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/duty_code"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="MX78"
                  android:id="@+id/_dutyCode"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/captain"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="Richard Versluis"
                  android:id="@+id/_captain"
        />

    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="2dp">
        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_officer"
                android:textStyle="bold"

        />
        <TextView android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:layout_weight="1"
                  tools:text="Jeroen Derwort"
                  android:id="@+id/_firstOfficer"
        />

    </LinearLayout> <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="2dp">
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/flight_attendant"
            android:textStyle="bold"
    />
    <TextView android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              tools:text="Lucy Stone"
              android:id="@+id/_flightAttendant"
    />

</LinearLayout>




</LinearLayout>